fix gap
fix gap

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -327,7 +327,7 @@ a:hover {
 	text-align: center;
 	width: 250px;
 	margin: 0px auto;
-	padding: 20px 0px 0px 0px;
+	padding: 50px 0px 0px 0px;
 }
 
 .what {
